Trello #83: Fix footer address text vetical spacing

--- a/wp-content/themes/brooklyn-child/oldstyle.css
+++ b/wp-content/themes/brooklyn-child/oldstyle.css
@@ -6561,12 +6561,6 @@ td.wccpf_label {
   line-height: 1.1;
 }
 
-.footer__col ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
 .footer__col li {
   line-height: 1;
 }
